[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Inimigos/Marreco/Marreco.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Inimigos/Marreco/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Singletons/PlayerState.tres" type="Resource" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 195.96

[sub_resource type="CircleShape2D" id=3]
radius = 37.7966

[node name="Marreco" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 2
script = ExtResource( 1 )
bullet_scene = ExtResource( 2 )
player_state = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.351085, 0.764031 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Ranged" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ranged"]
shape = SubResource( 2 )

[node name="Melee" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Melee"]
shape = SubResource( 3 )

[node name="BouncingTimer" type="Timer" parent="."]
one_shot = true

[node name="TiroCooldown" type="Timer" parent="."]
one_shot = true

[node name="RecuperandoTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Ranged" to="." method="_on_Ranged_body_entered"]
[connection signal="body_exited" from="Ranged" to="." method="_on_Ranged_body_exited"]
[connection signal="body_entered" from="Melee" to="." method="_on_Melee_body_entered"]
[connection signal="body_exited" from="Melee" to="." method="_on_Melee_body_exited"]
[connection signal="timeout" from="BouncingTimer" to="." method="_on_BouncingTimer_timeout"]
